recoverPassword, covarage reports,  test...
