# src/shared/infra/http/Routes/index.ts
@@ -3,6 +3,7 @@ import { Router } from "express";
 import { authenticateRoutes } from "./authenticate.routes";
 import { carsRoutes } from "./cars.routes";
 import { categoriesRoutes } from "./categories.routes";
+import { passwordRoutes } from "./password.routes";
 import { rentalsRoutes } from "./rental.routes";
 import { specificationRoutes } from "./specification.routes";
 import { usersRoutes } from "./users.routes";
@@ -14,6 +15,7 @@ router.use("/categories", categoriesRoutes);
 router.use("/users", usersRoutes);
 router.use("/cars", carsRoutes);
 router.use("/rentals", rentalsRoutes);
+router.use("/password", passwordRoutes);
 router.use(authenticateRoutes);
 
 export { router };
